<resources>
    <string name="app_name">RappiCoop</string>
    <string name="titulo">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="edad">Edad</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="aceptar">Registrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="titulo2">Registrado</string>
    <string name="ok">OK</string>
    <string name="confirmacion">Confirma Contraseña</string>
</resources>